--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="app">   
         <header>
             <div class="teste">
-                <div class="ray_logo"> <span>CATAR'S COPA</span> <br> CALENDÁRIO
+                <div class="ray_logo"> <span>QATAR'S COPA</span> <br> CALENDÁRIO
                 </div>
                 <div class="ray_logo">
                     <img src="./assets/bola.svg" alt="Logo Copa">
